Fixed spacing issue

--- a/frontend/src/MapTitle.module.css
+++ b/frontend/src/MapTitle.module.css
@@ -40,7 +40,7 @@
     padding: 12px;
     margin: 16px auto;
     position: relative;
-    right: 10%;
+    right: 3%;
     display: block;
     width: fit-content;
     text-align: center;
